Bug 404745 - Wrong multicolor feature behaviour
Summary: Wrong multicolor feature behaviour
Status: RESOLVED FIXED
Alias: None
Product: lattedock
Classification: Unmaintained
Component: application (other bugs)
Version First Reported In: git (master)
Platform: Other Linux
: NOR normal
Target Milestone: ---
Assignee: Michail Vourlakos
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2019-02-23 17:09 UTC by Jacobtey
Modified: 2019-02-23 20:09 UTC (History)
0 users

See Also:
Latest Commit:
Version Fixed/Implemented In:
Sentry Crash Report:


Attachments
colors (2.71 MB, video/webm)
2019-02-23 17:09 UTC, Jacobtey
Details

Note You need to log in before you can comment on or make changes to this bug.
Description Jacobtey 2019-02-23 17:09:57 UTC
Created attachment 118323 [details]
colors

See attachment.

1. Tray pop up
The color of the top panel should be the same as the tray pop-up menu. 
The color of the bottom panel should match the color of the maximized window under the tray's pop-up menu. 

2.Calculator
The color of the panels should match the color of the calculator window when they touch. Otherwise, the colors of the panels should match the colors of the visible windows located under the calculator and in contact with the panels. 


EXPECTED RESULT


SOFTWARE/OS VERSIONS
Windows: 
MacOS: 
Linux/KDE Plasma: 
(available in About System)
KDE Plasma Version: 
KDE Frameworks Version: 
Qt Version: 

ADDITIONAL INFORMATION
Comment 1 Michail Vourlakos 2019-02-23 18:14:28 UTC
(In reply to Jacobtey from comment #0)
 
> 1. Tray pop up
> The color of the top panel should be the same as the tray pop-up menu. 

Have you enabled in Background->Exceptions->Prefer plasma background and colors for expanded applets?

> The color of the bottom panel should match the color of the maximized window
> under the tray's pop-up menu. 
> 

have you set it to touching?


> 2.Calculator
> The color of the panels should match the color of the calculator window when
> they touch. Otherwise, the colors of the panels should match the colors of
> the visible windows located under the calculator and in contact with the
> panels. 
> 

makes sense

Please send me your layout in order to reproduce and debug...
Comment 2 Michail Vourlakos 2019-02-23 18:52:14 UTC
Git commit 17c602347bf237ba4a864eb3098dc55527a6da5b by Michail Vourlakos.
Committed on 23/02/2019 at 18:51.
Pushed by mvourlakos into branch 'master'.

use touching windows scheme at all cases

M  +2    -0    app/view/windowstracker.cpp
M  +30   -6    containment/package/contents/ui/colorizer/Manager.qml
M  +1    -1    containment/package/contents/ui/main.qml

https://commits.kde.org/latte-dock/17c602347bf237ba4a864eb3098dc55527a6da5b
Comment 3 Jacobtey 2019-02-23 20:09:13 UTC
(In reply to Michail Vourlakos from comment #2)
> Git commit 17c602347bf237ba4a864eb3098dc55527a6da5b by Michail Vourlakos.
> Committed on 23/02/2019 at 18:51.
> Pushed by mvourlakos into branch 'master'.
> 
> use touching windows scheme at all cases
> 
> M  +2    -0    app/view/windowstracker.cpp
> M  +30   -6    containment/package/contents/ui/colorizer/Manager.qml
> M  +1    -1    containment/package/contents/ui/main.qml
> 
> https://commits.kde.org/latte-dock/17c602347bf237ba4a864eb3098dc55527a6da5b

But this brought bug 404483 back - https://bugs.kde.org/show_bug.cgi?id=404483