use touching windows scheme at all cases

BUG: 404745